# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  README.md
LearnOpenGL/Content/Shaders/Fragment/: GaussianBlur.frag  LightObj.frag  Lighting.frag  Mesh.frag  MeshDeffered.frag  Mesh_NoLight.frag  SSAOBlurDeffered.frag  SSAODeffered.frag  Screen.frag  ScreenDeffered.frag  Skybox.frag  TestShader.frag  Window.frag
LearnOpenGL/Content/Shaders/Fragment/Backup/: SoftSpotLight.frag
LearnOpenGL/Content/Shaders/Fragment/Old/: LightObj.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/DepthOnly/Shadows/: ShadowCubemap.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/SceneObject/: DepthBuffer.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/SceneObject/EnvMapping/: SkyboxReflection.frag  SkyboxRefraction.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/SceneObject/Lights/: DirectionalLight.frag  PointLight.frag  SoftSpotLight.frag  SpotLight.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/SceneObject/Shadows/: DirectionalShadowMapping.frag
LearnOpenGL/Content/Shaders/Fragment/Saved/ScreenQuad/PostProcess/: Grayscale.frag  Inversion.frag  KernelBased.frag
LearnOpenGL/Content/Shaders/Fragment/Sketch/: DepthBuffer.frag
LearnOpenGL/Content/Shaders/Fragment/Sketch/EnvMapping/: SkyboxReflection.frag  SkyboxRefraction.frag
LearnOpenGL/Content/Shaders/Fragment/Sketch/Lights/: DirectionalLight.frag  PointLight.frag  SoftSpotLight.frag  SpotLight.frag
LearnOpenGL/Content/Shaders/Fragment/Sketch/PostProcess/: Grayscale.frag  Inversion.frag  KernelBased.frag
LearnOpenGL/Content/Shaders/Geometry/Saved/DepthOnly/Shadows/: ShadowCubemap.geom
LearnOpenGL/Content/Shaders/Vertex/: Lighting.vert  Mesh.vert  MeshDeffered.vert  Screen.vert  ScreenDeffered.vert  Skybox.vert  TestShader.vert  Window.vert
LearnOpenGL/Content/Shaders/Vertex/Old/: Lighting.vert
LearnOpenGL/Content/Shaders/Vertex/Saved/Other/: GaussianBlur.vert
LearnOpenGL/Content/Shaders/Vertex/Saved/SceneObject/: MeshBloom.vert
LearnOpenGL/Content/Shaders/Vertex/Saved/SceneObject/EnvMapping/: SkyboxRefraction.vert
LearnOpenGL/Content/Shaders/Vertex/Sketch/EnvMapping/: SkyboxReflection.vert  SkyboxRefraction.vert
LearnOpenGL/Content/Shaders/Vertex/Sketch/Lights/: Light.vert
LearnOpenGL/Shaders/Fragment/: TestShader.fs
LearnOpenGL/Source/Private/: Framebuffer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  UniformBuffer.cpp  main.cpp
LearnOpenGL/Source/Private/App/: Application.cpp  main.cpp
LearnOpenGL/Source/Private/Misc/: Color.cpp  MeshUtils.cpp  RenderUtils.cpp  ShaderUtils.cpp  StringUtils.cpp  TextureUtils.cpp  Timer.cpp
LearnOpenGL/Source/Private/Player/: Camera.cpp
LearnOpenGL/Source/Private/Render/: RenderUtils.cpp
LearnOpenGL/Source/Private/Render/Light/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
LearnOpenGL/Source/Private/Render/Light/Base/: LightBase.cpp
LearnOpenGL/Source/Private/Render/Scene/: Mesh.cpp  Mesh2D.cpp  MeshUtils.cpp  Model.cpp  Scene.cpp  SceneObject.cpp
LearnOpenGL/Source/Private/Texture/: Cubemap.cpp  DepthCubemap.cpp  DepthMap.cpp  Texture.cpp  TextureUtils.cpp
LearnOpenGL/Source/Private/Types/: Camera.cpp  Color.cpp  Cubemap.cpp  Framebuffer.cpp  Mesh.cpp  Mesh2D.cpp  Model.cpp  RenderBuffer.cpp  RenderTarget.cpp  RenderTexture.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  ShaderProgram.cpp  SharedObject.cpp  Skybox.cpp  Texture.cpp  Timer.cpp  UniformBuffer.cpp
LearnOpenGL/Source/Public/: Framebuffer.h  ModuleMinimal.h  Shader.h  ShaderProgram.h  Texture.h  UniformBuffer.h
LearnOpenGL/Source/Public/App/: Application.h
LearnOpenGL/Source/Public/Misc/: Color.h  ColorConsts.h  ColorUtils.h  FileUtils.h  IntegerTypes.h  MeshUtils.h  RenderTypes.h  RenderUtils.h  ShaderUtils.h  StringUtils.h  TextureUtils.h  Timer.h
LearnOpenGL/Source/Public/Player/: Camera.h
LearnOpenGL/Source/Public/Render/: RenderTypes.h
LearnOpenGL/Source/Public/Render/Light/: DirectionalLight.h  PointLight.h  SpotLight.h
LearnOpenGL/Source/Public/Render/Light/Base/: LightBase.h
LearnOpenGL/Source/Public/Render/Scene/: Mesh.h  Mesh2D.h  MeshUtils.h  Model.h
LearnOpenGL/Source/Public/Texture/: Cubemap.h  DepthCubemap.h  DepthMap.h  Skybox.h  Texture.h
LearnOpenGL/Source/Public/TypeTraits/: GLMTypeTraits.h
LearnOpenGL/Source/Public/Types/: Camera.h  Color.h  Framebuffer.h  Mesh.h  Model.h  RenderBuffer.h  RenderTarget.h  RenderTexture.h  Scene.h  SceneObject.h  SceneTypes.h  Shader.h  ShaderProgram.h  SharedObject.h  Skybox.h  Texture.h  Timer.h  UniformBuffer.h
